--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".controller.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -21,11 +21,13 @@
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts"/>
 
-        <activity android:name=".LeagueActivity">
+        <activity android:name=".controller.LeagueActivity">
         </activity>
-        <activity android:name=".BaseActivity">
+        <activity android:name=".controller.BaseActivity">
         </activity>
-        <activity android:name=".SkillActivity">
+        <activity android:name=".controller.SkillActivity">
+        </activity>
+        <activity android:name=".controller.FinishActivity">
         </activity>
     </application>
 
